--- a/nebula-api/.env.dev
+++ b/nebula-api/.env.dev
@@ -1,4 +1,4 @@
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5555/nebuladb?schema=public"
 
 JWT_SECRET="secret"
 JWT_EXPIRES_IN="1d"
