--- a/nebula-web/tsconfig.json
+++ b/nebula-web/tsconfig.json
@@ -6,7 +6,7 @@
     "lib": ["dom", "esnext"],
     "moduleResolution": "node",
     "skipLibCheck": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
